# ChatPlugin

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
nonebot_plugin_milky_chat/: __init__.py  adapter.py  commands.py  config.py
