[project]
name = "nonebot-plugin-milky-chat"
version = "1.0.0"
description = "NoneBot AI 聊天插件，内置 MilkyAdapter，支持自定义 API、模型和提示词"
authors = [{ name = "Milky", email = "milky@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "nonebot2>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "nonebot-adapter-onebot>=2.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nonebot_plugin_milky_chat*"]
